@@ -127,6 +127,20 @@ name|hadoop
 operator|.
 name|io
 operator|.
+name|LongWritable
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|io
+operator|.
 name|Text
 import|;
 end_import
@@ -229,6 +243,45 @@ specifier|public
 name|Text
 name|evaluate
 parameter_list|(
+name|LongWritable
+name|unixtime
+parameter_list|,
+name|Text
+name|format
+parameter_list|)
+block|{
+if|if
+condition|(
+name|unixtime
+operator|==
+literal|null
+operator|||
+name|format
+operator|==
+literal|null
+condition|)
+block|{
+return|return
+literal|null
+return|;
+block|}
+return|return
+name|eval
+argument_list|(
+name|unixtime
+operator|.
+name|get
+argument_list|()
+argument_list|,
+name|format
+argument_list|)
+return|;
+block|}
+comment|/**    * Convert UnixTime to a string format.    * @param unixtime  The number of seconds from 1970-01-01 00:00:00    * @param format See http://java.sun.com/j2se/1.4.2/docs/api/java/text/SimpleDateFormat.html    * @return a String in the format specified.    */
+specifier|public
+name|Text
+name|evaluate
+parameter_list|(
 name|IntWritable
 name|unixtime
 parameter_list|,
@@ -251,6 +304,33 @@ return|return
 literal|null
 return|;
 block|}
+return|return
+name|eval
+argument_list|(
+operator|(
+name|long
+operator|)
+name|unixtime
+operator|.
+name|get
+argument_list|()
+argument_list|,
+name|format
+argument_list|)
+return|;
+block|}
+comment|/**    * Internal evaluation function given the seconds from 1970-01-01 00:00:00    * and the output text format.    * @param unixtime seconds of type long from 1970-01-01 00:00:00    * @param format display format. See http://java.sun.com/j2se/1.4.2/docs/api/java/text/SimpleDateFormat.html    * @return elapsed time in the given format.    */
+specifier|private
+name|Text
+name|eval
+parameter_list|(
+name|long
+name|unixtime
+parameter_list|,
+name|Text
+name|format
+parameter_list|)
+block|{
 if|if
 condition|(
 operator|!
@@ -289,9 +369,6 @@ operator|new
 name|Date
 argument_list|(
 name|unixtime
-operator|.
-name|get
-argument_list|()
 operator|*
 literal|1000L
 argument_list|)
